data/derived/sp14/progs/unify/prog4748.ml.out
Characters 56-57:
  wwhile(y, b);;
         ^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
